src/test/ui/consts/const-size_of-cycle.stderr
error[E0391]: cycle detected when computing layout of `Foo`
   |
note: ...which requires normalizing `ParamEnvAnd { param_env: ParamEnv { caller_bounds: [], reveal: All }, value: [u8; _] }`...
note: ...which requires const-evaluating `Foo::bytes::{{constant}}`...
  --> $SRC_DIR/libcore/mem.rs:323:14
   |
LL |     unsafe { intrinsics::size_of::<T>() }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing layout of `Foo`, completing the cycle
note: cycle used when const-evaluating `Foo::bytes::{{constant}}`
  --> $SRC_DIR/libcore/mem.rs:323:14
   |
LL |     unsafe { intrinsics::size_of::<T>() }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
